Closed Bug 1952693 Opened 1 year ago Closed 1 year ago

default link color has changed

Categories

(Core :: Layout, defect)

Firefox 138
defect

Tracking

()

RESOLVED FIXED
138 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox138 --- fixed

People

(Reporter: lilydjwg, Assigned: eeejay)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:138.0) Gecko/20100101 Firefox/138.0

Steps to reproduce:

Visit a nginx directory listing, e.g. https://mirror.pkgbuild.com/iso/, or a website with old styles, e.g. https://utcc.utoronto.ca/~cks/space/blog/.

Actual results:

Default link color has changed from #0000ee to #0066cc.

Expected results:

Default link color remains the same as before.

This happens with bug 1898096, possibly unintended since that bug's title is "Introduce Contrast Control Settings" and says it wants to reuse the settings for contrast control, rather than changing the default link color itself.

This change makes old-style pages look half-modern and unpleasant. I mean, the link color feels modern but other aspects still remind me that this is an old-style page. I tried to use the stylus extension to change it back, only to realize that I can't target "the links using default color"; "a:link" will take effect when parent elements have color specified.

So, can we keep the old color?

The Bugbug bot thinks this bug should belong to the 'WebExtensions::Untriaged' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Product: Firefox → WebExtensions
Component: Untriaged → Theme
Product: WebExtensions → Firefox

I am seeing this as well. It is potentially a compatibility issue, as until now, all browsers agreed on the default link color being #0000ee.

It seems like the change has aligned Linux to be the same as other platforms. At least on mac it has been #0066cc for a while, on Windows too I think.

From looking at other browsers, I think it would be right to have Firefox use #0000ee on all platforms as well. Maybe worth morphing this bug.

Component: Theme → Layout
Product: Firefox → Core

I think bug 1065998 introduced that off-blue color as a hard-coded version of what was expected in windows 8.

(In reply to Eitan Isaacson [:eeejay] from comment #3)

At least on mac it has been #0066cc for a while, on Windows too I think.

This is not true--in usage, the default link color has been #0000ee for Firefox on macOS as long as I can remember, and it only changed with bug 1898096.

Looks like you are right. For some reason when I tested nightly before I updated I saw #0066cc.

I think this should change so we are consistent:
https://searchfox.org/mozilla-central/source/widget/nsXPLookAndFeel.cpp#683

This makes it consistent with the fallback in PreferenceSheet.mLink.

This is also consistent with all other browsers.

Assignee: nobody → eitan
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2c1c7cb18c3d Make stand-in link color #0000ee. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
Regressions: 1963293
Keywords: regression
Regressed by: 1952328

Set release status flags based on info from the regressing bug 1952328

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: