Bug 1952693 - Make stand-in link color #0000ee. r=emilio

This makes it consistent with the fallback in PreferenceSheet.mLink.

This is also consistent with all other browsers.

Differential Revision: https://phabricator.services.mozilla.com/D241116