gfx/thebes/gfxUtils.cpp
@@ -1058,7 +1058,7 @@ const gfx::DeviceColor& gfxUtils::GetColorForFrameNumber(
     uint32_t i = 0;
     colors[i++] = gfx::DeviceColor::FromABGR(0xffff0000);
     colors[i++] = gfx::DeviceColor::FromABGR(0xffcc00ff);
-    colors[i++] = gfx::DeviceColor::FromABGR(0xff0066cc);
+    colors[i++] = gfx::DeviceColor::FromABGR(0xff0000ee);
     colors[i++] = gfx::DeviceColor::FromABGR(0xff00ff00);
     colors[i++] = gfx::DeviceColor::FromABGR(0xff33ffff);
     colors[i++] = gfx::DeviceColor::FromABGR(0xffff0099);
@@ -1299,7 +1299,7 @@ const float kIdentityNarrowYCbCrToRGB_RowMajor[16] = {
 /* static */ const float* gfxUtils::YuvToRgbMatrix4x3RowMajor(
     gfx::YUVColorSpace aYUVColorSpace) {
 #define X(x) \
-  { x[0], x[1], x[2], 0.0f, x[4], x[5], x[6], 0.0f, x[8], x[9], x[10], 0.0f }
+  {x[0], x[1], x[2], 0.0f, x[4], x[5], x[6], 0.0f, x[8], x[9], x[10], 0.0f}
 
   static const float rec601[12] = X(kBT601NarrowYCbCrToRGB_RowMajor);
   static const float rec709[12] = X(kBT709NarrowYCbCrToRGB_RowMajor);
@@ -1324,8 +1324,7 @@ const float kIdentityNarrowYCbCrToRGB_RowMajor[16] = {
 
 /* static */ const float* gfxUtils::YuvToRgbMatrix3x3ColumnMajor(
     gfx::YUVColorSpace aYUVColorSpace) {
-#define X(x) \
-  { x[0], x[4], x[8], x[1], x[5], x[9], x[2], x[6], x[10] }
+#define X(x) {x[0], x[4], x[8], x[1], x[5], x[9], x[2], x[6], x[10]}
 
   static const float rec601[9] = X(kBT601NarrowYCbCrToRGB_RowMajor);
   static const float rec709[9] = X(kBT709NarrowYCbCrToRGB_RowMajor);
@@ -1350,11 +1349,9 @@ const float kIdentityNarrowYCbCrToRGB_RowMajor[16] = {
 
 /* static */ const float* gfxUtils::YuvToRgbMatrix4x4ColumnMajor(
     YUVColorSpace aYUVColorSpace) {
-#define X(x)                                                             \
-  {                                                                      \
-    x[0], x[4], x[8], x[12], x[1], x[5], x[9], x[13], x[2], x[6], x[10], \
-        x[14], x[3], x[7], x[11], x[15]                                  \
-  }
+#define X(x)                                           \
+  {x[0], x[4], x[8],  x[12], x[1], x[5], x[9],  x[13], \
+   x[2], x[6], x[10], x[14], x[3], x[7], x[11], x[15]}
 
   static const float rec601[16] = X(kBT601NarrowYCbCrToRGB_RowMajor);
   static const float rec709[16] = X(kBT709NarrowYCbCrToRGB_RowMajor);
